--- a/src/simple_rviz_pkg/launch/costmap_common_params.yaml
+++ b/src/simple_rviz_pkg/launch/costmap_common_params.yaml
@@ -1,20 +1,20 @@
-map_type: voxel
-origin_z: 0.0
-z_resolution: 0.2
-z_voxels: 10
-unknown_threshold: 9
-mark_threshold: 0
-transform_tolerance: 0.3
 obstacle_range: 2.5
-max_obstacle_height: 2.0
 raytrace_range: 3.0
+robot_radius: 0.15
 footprint: [[0.1, 0.1], [-0.1, 0.1], [-0.1, -0.1], [0.1, -0.1]]
-footprint_padding: 0.01
-inflation_radius: 0.1
+footprint_padding: 0.1
+inflation_radius: 1.0
 cost_scaling_factor: 10.0
 lethal_cost_threshold: 100
 observation_sources: base_scan
-base_scan: {data_type: LaserScan, expected_update_rate: 0.7,
-  observation_persistence: 0.0, marking: true, clearing: true, max_obstacle_height: 0.4, min_obstacle_height: 0.08}
+base_scan:
+  data_type: LaserScan
+  expected_update_rate: 0.4
+  observation_persistence: 0.0
+  marking: true
+  clearing: true
+  max_obstacle_height: 2.5
+  min_obstacle_height: 0.08
+
 
 
