--- a/src/simple_rviz_pkg/launch/global_costmap_params.yaml
+++ b/src/simple_rviz_pkg/launch/global_costmap_params.yaml
@@ -2,11 +2,15 @@ global_costmap:
   global_frame: map
   robot_base_frame: base_link
   update_frequency: 0.5
-  publish_frequency: 0.5
+  publish_frequency: 0.2
   static_map: true
-  rolling_window: false
+  rolling_window: true
   origin_x: 0.0
   origin_y: 0.0
-  footprint_padding: 0.02
+  footprint_padding: 0.1
+  width: 100.0
+  height: 100.0
+  inflation_radius: 1.5
+
 
 
