--- a/src/simple_rviz_pkg/package.xml
+++ b/src/simple_rviz_pkg/package.xml
@@ -58,6 +58,7 @@
   <build_depend>actionlib</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>tf2_ros</build_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>opencv2</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
